2003-xx-xx v0.xx:
  * Add simplest possible example to manpage.

2003-11-20 v0.25:
  * Allow the same server id to be used for multiple hosts to share header cache data. (Useful if you have multiple accounts on the same server.)
  * Don't print extraneous exception information on tcp errors.
  * Also look for getopt_long in libgnugetopt.  (But you probably need --with-gnugetopt-prefix=/usr/local for it to be found.)
  * Properly handle par2 files with the first packet(s) damaged.
  * Give incomplete par/par2 files less weight when choosing which to get.
  * Consider incomplete par2 files even if -i isn't specified.
  * If there aren't enough par2 files available, try getting some incomplete data files even if -i wasn't specified.
  * Fix compile with the MacOSX version of gcc 3.3.
  * Support bsd-style regex word boundaries.
  * Fix par1 handling on bigendian systems due to typo in byte swapping macro.

2003-10-04 v0.24.2:
  * Use gcc's automatic dependancy generation rather than a seperate depend rule.
  * Reenable UUOPT_DUMBNESS, fixes problems with uulib mis-parsing some subject lines.
  * Instead, requires a patched version of uulib that allows us to explicitly tell it what part number each file is. (http://nget.sourceforge.net/patches/uulib-0.5.18-LoadFileWithPartNo.patch)
  * Make -K/--no-decode imply --no-autopar.
  * Rename files that had decode warnings/errors so they won't cause reposts to be dupeskipped.
  * Fix death by SIGPIPE on broken connection on some platforms.
  * Better handling of completely damaged par files. (If none of a set can be parsed, set the autopar error, rather than ignoring them completely.)
  * Show most of the autopar status messages without needing to set debug=1.

2003-09-01 v0.24.1:
  * Fix compile with gcc-3.3.
  * Fix a few testcases leaving tempfiles behind.

2003-08-31 v0.24: